--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ header h1 {
     padding: 15px;
     font-size: 18px;
     margin-right: 20px;
+    font-family: inherit;
 }
 
 .generate__btn, .pdf__btn, .reset__btn {
@@ -74,6 +75,7 @@ header h1 {
     font-size: 18px;
     border-radius: 12px;
     cursor: pointer;
+    font-family: inherit;
 }
 
 .generate__btn, .pdf__btn {
